Setting URLs in the detail boxes.